Fixed the backend controllers
Fixed the backend controllers
